# mcp-onboarder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MVP-PLAN.md  README.md  ROADMAP.md  mcp_onboarder.py  pyproject.toml
.github/: competitors.yml
.github/scripts/: competitor_watch.py
.github/workflows/: ci.yml  competitor-watch.yml  release-please.yml
runs/competitor-watch/: report-2026-05-18.md  report-2026-05-25.md  report-2026-06-01.md  report-2026-06-08.md  report-2026-06-15.md  report-2026-06-22.md  report-2026-06-29.md  state.json
tests/: test_mcp_onboarder.py
