[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-onboarder"
version = "0.1.0"
description = "Cross-platform MCP server install + pre-install risk audit CLI for Claude Code, Claude Desktop, Cursor."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Luis Gerardo Rodriguez", email = "hello@penguinalley.com" },
]
keywords = ["mcp", "model-context-protocol", "claude", "anthropic", "cli", "audit", "security", "onboarding"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
  "Topic :: System :: Installation/Setup",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/PenguinAlleyApps/mcp-onboarder"
Issues = "https://github.com/PenguinAlleyApps/mcp-onboarder/issues"
Source = "https://github.com/PenguinAlleyApps/mcp-onboarder"

[project.scripts]
mcp-onboarder = "mcp_onboarder:main"

[tool.setuptools]
py-modules = ["mcp_onboarder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
